tests/fixtures/invalid/max_str_dict.py
# Cannot call max() with Str, Dict[str, int]
x = max("hello", {"a": 1})
